# spin-trigger-mqtt

./: Cargo.toml  README.md  spin-pluginify.toml
.devcontainer/: bootstrap.sh
.github/workflows/: build.yaml
examples/mqtt-app/: spin.toml
sdk/: Cargo.toml
sdk/macro/src/: lib.rs
src/: lib.rs
tests/: integration_test.sh
tests/src/: lib.rs
