[package]
name = "trigger-mqtt"
version = "0.7.1"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = "1.0.100"
clap = { version = "3.2.25", features = ["derive", "env"] }
futures = "0.3.31"
serde = "1.0.228"
spin-app = { git = "https://github.com/spinframework/spin", tag = "v3.6.2" }
spin-core = { git = "https://github.com/spinframework/spin", tag = "v3.6.2" }
spin-expressions = { git = "https://github.com/spinframework/spin", tag = "v3.6.2" }
spin-factors = { git = "https://github.com/spinframework/spin", tag = "v3.6.2" }
spin-runtime-factors = { git = "https://github.com/spinframework/spin", tag = "v3.6.2" }
spin-trigger = { git = "https://github.com/spinframework/spin", tag = "v3.6.2" }
spin-telemetry = { git = "https://github.com/spinframework/spin", tag = "v3.6.2" }
spin-factor-variables = { git = "https://github.com/spinframework/spin", tag = "v3.6.2" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
paho-mqtt = { version = "0.13.3", features = ["vendored-ssl"] }
wasmtime = { version = "41.0.4" }

[workspace]
members = ["sdk", "sdk/macro"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.90"

[workspace.dependencies]
wit-bindgen = "0.51.0"
