[package]
name = "trigger-mqtt"
version = "0.7.2"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = "1.0.100"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3.31"
serde = "1.0.228"
spin-app = { git = "https://github.com/spinframework/spin", branch = "main" }
spin-core = { git = "https://github.com/spinframework/spin", branch = "main" }
spin-expressions = { git = "https://github.com/spinframework/spin", branch = "main" }
spin-factors = { git = "https://github.com/spinframework/spin", branch = "main" }
spin-runtime-factors = { git = "https://github.com/spinframework/spin", branch = "main" }
spin-trigger = { git = "https://github.com/spinframework/spin", branch = "main" }
spin-telemetry = { git = "https://github.com/spinframework/spin", branch = "main" }
spin-factor-variables = { git = "https://github.com/spinframework/spin", branch = "main" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
paho-mqtt = { version = "0.13.3", features = ["vendored-ssl"] }
wasmtime = { version = "43" }

[workspace]
members = ["sdk", "sdk/macro"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.91"

[workspace.dependencies]
wit-bindgen = "0.54.0"
