[package]
name = "spin-mqtt-sdk"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
include = ["../spin-mqtt.wit"]

[lib]
name = "spin_mqtt_sdk"

[dependencies]
spin-executor = "5.2.0"
spin-mqtt-macro = { path = "macro" }
wit-bindgen = { workspace = true }